pods/03-pod-command.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample3
spec:
  containers:
    - name: debug
      image: centos:7
