pods/04-pod-volumes.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample4
spec:
  containers:
    - image: centos:7
      name: centos
      command:
        - sleep
        - "10000"
      volumeMounts:
        - mountPath: /data
          name: test-volume
  volumes:
    - name: test-volume
      # This AWS EBS volume must already exist.
      awsElasticBlockStore:
        volumeID: "vol-04729b9327f719eff"
        fsType: ext4
