pods/05-pod-port.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample5
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - name: http
          containerPort: 80
          hostPort: 80
