pods/06-pod-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample6
spec:
  containers:
    - name: centos
      image: centos:7
      command:
        - sleep
        - "100000"
