pods/08-probes.yml
apiVersion: v1
kind: Pod
metadata:
  name: readiness
spec:
  containers:
    - name: readiness
      image: rkalluru/zs01-readiness
      readinessProbe:
        exec:
          command:
            - cat
            - /sample.txt
        initialDelaySeconds: 5
        periodSeconds: 5
