pods/09-security-context.yml
apiVersion: v1
kind: Pod
metadata:
  name: security
spec:
  containers:
    - name: security
      image: pavanvere/pavanzs.online-security
      securityContext:
        runAsUser: 2000
        #runAsNonRoot: true
