pods/11-labels.yml
apiVersion: v1
kind: Pod
metadata:
  name: fruit
  labels:
    fruit_name: Berry
    imported_from: kerala
spec:
  containers:
    - name: centos
      image: centos:7
      command:
        - sleep
        - "10000000"
---
apiVersion: v1
kind: Pod
metadata:
  name: annotations
  annotations:
    store.invetory/fruit-name: Berry
    country/imported: kerala
spec:
  containers:
    - name: centos
      image: centos:7
      command:
        - sleep
        - "10000000"
