pods/12-config-mount.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: carry
          mountPath: /usr/share/nginx/html
  volumes:
    - name: carry
      configMap:
        name: carry
