pods/10-network-policy.yml
apiVersion: v1
kind: Pod
metadata:
  name: dev-pod
  namespace: dev
spec:
  containers:
    - name: centos
      image: centos:7
      command:
        - sleep
        - "1000000"
---
apiVersion: v1
kind: Pod
metadata:
  name: prod-pod
  namespace: prod
spec:
  containers:
    - name: nginx
      image: nginx
---
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
